removed Root Cause column from defect count KPI